2006-11-22  Michael Natterer  <mitch@gimp.org>

	* app/actions/actions.c (action_select_property): add support for
	G_TYPE_INT properties.

	* app/actions/tools-actions.c
	* app/actions/tools-commands.[ch]: add actions and callback which
	affect the foreground select tool's stroke-width property.

	* app/tools/gimpforegroundselecttool.c: map tool-action-value-2
	(tool tip size) to the new action.

	* app/tools/gimppaintoptions-gui.c: fixed visibility of the brush
	scale slider.

2006-11-22  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpbrushcore.[ch]: applied modified patch from Adrian
	Likins which adds a GRand to the GimpBrushCore struct and uses it
	instead of using g_random_foo() functions. Fixes bug #377981.

2006-11-22  Sven Neumann  <sven@gimp.org>

	* app/gui/gui-message.c (gui_message_error_console): don't raise
	and focus the error console for not so severe error messages. Fixes
	bug #322210 and bug #373254.

	* app/widgets/gimperrorconsole.c (gimp_error_console_init): reduced
	font sizes in error console.

2006-11-22  Simon Budig  <simon@gimp.org>

	* app/xcf/xcf-load.c: load the channels in the proper order.
	fixes bug #378003. Thanks to Chris Mohler for spotting this.

2006-11-22  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpchainbutton.c: code cleanup, seems to fix
	bug #376668.

2006-11-21  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/brush.pdb (brush_get_pixels): the pixmap's size
	is width * height * bpp, not just width * height.

	* app/pdb/brush_cmds.c: regenerated.

2006-11-21  Simon Budig  <simon@gimp.org>

	* plug-ins/metadata/metadata.h: fixed typo spotted by John Marshall
	(bug #377811). Thanks for spotting this.

2006-11-21  Sven Neumann  <sven@gimp.org>

	* app/batch.c (batch_run_cmd): check argument types before
	assigning them. Allows to use a batch processor processor without
	a run-mode parameter.

2006-11-21  Sven Neumann  <sven@gimp.org>

	* etc/templaterc: applied patch from Michael Schumacher that